Fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
   text-align: center;
   padding-top: 40px;
+  overflow: hidden;
 }
